--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Ma formation Javascript</h1>
     <p>Bienvenue sur la page de formation JS</p>
-    <script src="/js/app.js"></script>
+    <script src="/js/tp/tp20.js"></script>
   </body>
 </html>
